fix: participant selection heading & participant checkbox spacing

--- a/src/components/expenses/StepsAddExpense/stepAddExpense.module.css
+++ b/src/components/expenses/StepsAddExpense/stepAddExpense.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin: 24px 16px;
+  margin: 24px 16px 0;
 }
 
 .alignCenter {
@@ -16,4 +16,8 @@
 
 .expenseDetailsInfo {
   margin-bottom: 24px;
+}
+
+.participantCheckbox {
+  margin-bottom: 16px;
 }
